--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand" href="index.html">StopBullying.com</a>
       <a class="btn btn-primary" href="index.html">Home</a>
       <a class="btn btn-primary" href="Bullying101.html">Bullying 101</a>
-      <a class="btn btn-primary" href="#">Sign In</a>
+      <a class="btn btn-primary" href="Jada.html">How People Bully</a>
     </div>
   </nav>
 
